// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`has a secondary element Login which renders correctly 1`] = `
.c0 {
  text-align: center;
  min-width: 8rem;
  border-radius: 5px;
  height: 1.75rem;
  margin-top: 0.1rem;
  margin-right: 1rem;
  padding-top: 0.8rem;
  font-weight: 600;
  text-transform: uppercase;
  font-size: 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  height: 1.2rem;
  width: 1.2rem;
  margin-bottom: -0.35rem;
  margin-right: 0.5rem;
}

<span
  className="c0"
>
  <svg
    className="c1"
    fill="none"
    height="1em"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="2"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"
    />
    <polyline
      points="10 17 15 12 10 7"
    />
    <line
      x1="15"
      x2="3"
      y1="12"
      y2="12"
    />
  </svg>
  Login
</span>
`;

exports[`renders correctly while logged in 1`] = `
.c0 {
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 1rem;
}

.c1 {
  padding-top: 0.3rem;
  height: 2rem;
}

.c4 {
  text-align: center;
  min-width: 8rem;
  border-radius: 5px;
  height: 1.75rem;
  margin-top: 0.1rem;
  margin-right: 1rem;
  padding-top: 0.8rem;
  font-weight: 600;
  text-transform: uppercase;
  font-size: 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5 {
  height: 1.2rem;
  width: 1.2rem;
  margin-bottom: -0.35rem;
  margin-right: 0.5rem;
}

.c3 {
  text-align: center;
  min-width: 8rem;
  border-radius: 5px;
  height: 1.75rem;
  margin-left: 1rem;
  margin-right: 1rem;
  padding-top: 0.8rem;
  font-weight: 600;
  text-transform: uppercase;
  font-size: 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 {
  margin-left: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<nav
  className="c0"
>
  <a
    aria-current="page"
    href="/"
    onClick={[Function]}
  >
    <img
      alt="logo"
      className="c1"
      src="logo.png"
    />
  </a>
  <div
    className="c2"
  />
  <a
    aria-current="page"
    className="c3"
    href="/"
    onClick={[Function]}
  >
    <span
      className="c4"
    >
      <svg
        className="c5"
        fill="none"
        height="1em"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"
        />
        <polyline
          points="10 17 15 12 10 7"
        />
        <line
          x1="15"
          x2="3"
          y1="12"
          y2="12"
        />
      </svg>
      Logout
    </span>
  </a>
</nav>
`;

exports[`renders correctly while logged out 1`] = `
.c0 {
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 1rem;
}

.c1 {
  padding-top: 0.3rem;
  height: 2rem;
}

.c3 {
  text-align: center;
  min-width: 8rem;
  border-radius: 5px;
  height: 1.75rem;
  margin-top: 0.1rem;
  margin-right: 1rem;
  padding-top: 0.8rem;
  font-weight: 600;
  text-transform: uppercase;
  font-size: 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  height: 1.2rem;
  width: 1.2rem;
  margin-bottom: -0.35rem;
  margin-right: 0.5rem;
}

.c2 {
  text-align: center;
  min-width: 8rem;
  border-radius: 5px;
  height: 1.75rem;
  margin-left: auto;
  margin-right: 1rem;
  padding-top: 0.8rem;
  font-weight: 600;
  text-transform: uppercase;
  font-size: 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<nav
  className="c0"
>
  <a
    aria-current="page"
    href="/"
    onClick={[Function]}
  >
    <img
      alt="logo"
      className="c1"
      src="logo.png"
    />
  </a>
  <a
    className="c2"
    href="/login"
    onClick={[Function]}
  >
    <span
      className="c3"
    >
      <svg
        className="c4"
        fill="none"
        height="1em"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"
        />
        <polyline
          points="10 17 15 12 10 7"
        />
        <line
          x1="15"
          x2="3"
          y1="12"
          y2="12"
        />
      </svg>
      Login
    </span>
  </a>
</nav>
`;
